force-app/main/default/objects/Log_Entry__c/Log_Entry__c.object-meta.xml
<CustomObject>
    <description>One record per individual log line. Child of Log__c. Insert-only. Bulk-inserted at flush time.</description>
    <label>Log Entry</label>
    <nameField>
        <displayFormat>LE-{00000}</displayFormat>
        <label>Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>