force-app/main/default/objects/Log_Entry__c/fields/Heap_At_Point_Kb__c.field-meta.xml
<CustomField>
    <fullName>Heap_At_Point_Kb__c</fullName>
    <description>Heap KB consumed at entry time. Always populated (free read).</description>
    <label>Heap At Point (KB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>