force-app/main/default/objects/Log_Entry__c/fields/Soql_At_Point__c.field-meta.xml
<CustomField>
    <fullName>Soql_At_Point__c</fullName>
    <description>SOQL queries consumed at entry time. Always populated (free read).</description>
    <label>SOQL At Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>